--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Preferences Compat</string>
     <string name="hello_world">This is an example on how to use PreferenceActivity with ActionBar under AppCompat.
-    For more context, access [blog post]</string>
+    For more context, access http://xisberto.wordpress.com/2014/11/08/how-to-combine-actionbar-and-preferenceactivity-headers-with-appcompat/</string>
     <string name="action_settings">Settings</string>
 
     <string name="header_general">General</string>
